test/classes/initializers/records/generics/explicitAssignment.good
explicitAssignment.chpl:15: In function 'main':
explicitAssignment.chpl:16: error: type mismatch in assignment from Foo(int(64)) to Foo(real(64))
